<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F2FF"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="8dp"
        android:clipToPadding="false"
        android:src="@drawable/anime_profil"
        android:clipChildren="false"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#D9FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:clipToPadding="false"
        android:clipChildren="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="22dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_border"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="#03A9F4"
                app:cardCornerRadius="55dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/anime_profil" />


                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nama"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_border" />

            <TextView
                android:id="@+id/user_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodi"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <LinearLayout
                android:id="@+id/menu_item_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_subtitle">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/id_card"
                    >

                </ImageView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:text="@string/nim"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:tint="#BDBDBD" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/social_icons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/menu_item_1"
                app:layout_constraintStart_toStartOf="@id/menu_item_1"
                app:layout_constraintTop_toBottomOf="@id/menu_item_1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_icon"
                    android:padding="12dp"
                    android:src="@drawable/instagram"
                    android:clickable="true"
                    android:onClick="openInstagram"
                    android:focusable="true" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_icon"
                    android:padding="12dp"
                    android:src="@drawable/youtube"
                    android:clickable="true"
                    android:onClick="openYouTube"
                    android:focusable="true" />

                <LinearLayout
                    android:id="@id/item_hobi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/joystick"

                        />

                </LinearLayout>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_icon"
                    android:padding="12dp"
                    android:src="@drawable/gmail"
                    android:clickable="true"
                    android:onClick="openGmail"
                    android:focusable="true" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_icon"
                    android:padding="12dp"
                    android:src="@drawable/linkedin"
                    android:clickable="true"
                    android:onClick="openLinkedIn"
                    android:focusable="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_item_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/menu_item_1"
                app:layout_constraintStart_toStartOf="@id/menu_item_1"
                app:layout_constraintTop_toBottomOf="@id/social_icons">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/lcoation"
                    >
                </ImageView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/asal"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/univ"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/menu_item_2"
                app:layout_constraintEnd_toEndOf="@id/menu_item_1"
                app:layout_constraintStart_toStartOf="@id/menu_item_1"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/school"
                    >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/univ"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    >

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_hobi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/menu_item_1"
                app:layout_constraintTop_toBottomOf="@id/univ"
                app:layout_constraintEnd_toEndOf="@id/menu_item_1"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/joystick"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/hobi"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/quote_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:padding="16dp"
                android:text="\&quot;bteurity Favodl iep byrelting Favoripatity\&quot; çekigest loestodes nteet wi"
                android:textColor="#C2185B"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/menu_item_1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/menu_item_1"
                app:layout_constraintTop_toBottomOf="@id/item_hobi" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>